update exercicio 2 + configs